# Tp_Algoritmos

./: AdministradorGen.cpp  AdministradorGen.h  ArrayCelulas.cpp  ArrayCelulas.h  CMakeLists.txt  Casillas.cpp  Celda.cpp  Celda.h  Celula.cpp  Celula.h  EasyBMP_BMP.h  Espia.cpp  Espia.h  Gen.cpp  Gen.h  Imprimir.cpp  Imprimir.h  Juego.cpp  Juego.h  Jugador.cpp  Jugador.h  Lista.cpp  Lista.h  Nodo.cpp  Nodo.h  README.md  Tablero.cpp  Tablero.h  Tesoro.cpp  Tesoro.h  celda.cpp  celda.h  celula.cpp  celula.h  efdfdgffxdddddddddddddddddddddddddd  imprimir.h  main.cpp
Tp1(Aux)/: CMakeLists.txt  Casilla.cpp  Casilla.h  Espia.cpp  Espia.h  Jugador.cpp  Jugador.h  Tablero.cpp  Tablero.h  Tesoro.cpp  Tesoro.h  TesoroBinario.cpp  TesoroBinario.h  main.cpp
