cmake_minimum_required(VERSION 3.23)
project(tp2)

set(CMAKE_CXX_STANDARD 14)

add_executable(tp2 main.cpp
                Lista.h Juego.h Juego.cpp Celula.cpp Celula.h Celda.h Celda.cpp Tablero.cpp Tablero.h Nodo.h Gen.cpp Gen.h Imprimir.cpp Imprimir.h EasyBMP_BMP.h EasyBMP.h EasyBMP_DataStructures.h EasyBMP_VariousBMPutilities.h EasyBMP.cpp
        )
